# 2022_2_SmartLogistics

./: .gitignore  CMakeLists.txt  Makefile  README.md  Копия Технопарк_проект(1).drawio  Копия Технопарк_проект.drawio  Технопарк_проект.drawio
.github/workflows/: CI_DanyaLyubimov.yml  CI_KateChur.yml
MyPart_DataBase/: .gitignore  CMakeLists.txt  Makefile  README.md  SmartLogistics
MyPart_DataBase/.github/workflows/: CI.yml
MyPart_DataBase/include/: DBHelper.hpp  dbhelper.hpp
MyPart_DataBase/scripts/: check.sh  format.sh
MyPart_DataBase/src/: DBHelper.cpp  dbhelper.cpp  logic.cpp
MyPart_DataBase/test/: CMakeLists.txt  main.cpp  test.cpp
include/: MainWindow.hpp  app.hpp  authorization.hpp  noneQT.hpp
project/src/: main.cpp
project/src/communicate/: Parser.cpp
project/src/include/: Answer.hpp  ApplicationServer.hpp  DBHelper.hpp  Handler.hpp  Logic.hpp  Message.hpp  Order.hpp  Task.hpp
project/src/server/ApplicationServer/: ApplicationServer.cpp
project/src/server/ApplicationServer/Handler/: Handler.cpp
project/tests/: TestHandler.cpp  TestServer.cpp  TestServerApplication.cpp
scripts/: check.sh  format.sh
src/: app  app.cpp
